--- a/BlogEngine/BlogEngine.Client/Pages/Blog/CreateBlog.razor
+++ b/BlogEngine/BlogEngine.Client/Pages/Blog/CreateBlog.razor
@@ -3,6 +3,7 @@
 @inject NavigationManager NavigationManager
 @inject IBlogClient BlogClient
 @inject ICategoryClient CategoryClient
+@attribute [Authorize]
 
 <TextCenter Text="Create Blog" />
 
@@ -25,10 +26,6 @@ else
 
     private async Task OnValidSubmit(BlogCreationDTO blogCreationDTO)
     {
-        #region Temporary
-        blogCreationDTO.ApplicationUserID = 6;
-        #endregion
-
         var blogDTO = await BlogClient.CreateAsync(blogCreationDTO);
         NavigationManager.NavigateTo($"blog/view/{blogDTO.ID}");
     }
