--- a/BlogEngine/BlogEngine.Client/Pages/Blog/EditBlog.razor
+++ b/BlogEngine/BlogEngine.Client/Pages/Blog/EditBlog.razor
@@ -3,6 +3,7 @@
 @layout NavigationLayout
 @inject IBlogClient BlogClient
 @inject NavigationManager NavigationManager
+@attribute [Authorize]
 
 <TextCenter Text="Edit Blog" />
 
