--- a/BlogEngine/BlogEngine.Client/Pages/Blog/ManageBlogs.razor
+++ b/BlogEngine/BlogEngine.Client/Pages/Blog/ManageBlogs.razor
@@ -1,6 +1,7 @@
 ﻿@page "/blog/manage"
 @layout NavigationLayout
 @inject IBlogClient BlogClient
+@attribute [Authorize]
 
 <TextCenter Text="Manage Blogs" />
 
