--- a/BlogEngine/BlogEngine.Client/Pages/Category/EditCategory.razor
+++ b/BlogEngine/BlogEngine.Client/Pages/Category/EditCategory.razor
@@ -3,6 +3,7 @@
 @layout NavigationLayout
 @inject ICategoryClient CategoryClient
 @inject NavigationManager NavigationManager
+@attribute [Authorize]
 
 <TextCenter Text="Edit Category" />
 
