--- a/BlogEngine/BlogEngine.Client/Shared/Blog/IndividualBlogArticle.razor
+++ b/BlogEngine/BlogEngine.Client/Shared/Blog/IndividualBlogArticle.razor
@@ -1,6 +1,6 @@
 ﻿<div class="card @CardCss">
 
-    @if (BlogDTO.Cover == null)
+    @if (BlogDTO.Cover is null)
     {
         <img class="card-img-top" src="css/Images/image_not_available_template.png">
     }
