--- a/BlogEngine/BlogEngine.Client/Pages/Blog/SearchBlogs.razor
+++ b/BlogEngine/BlogEngine.Client/Pages/Blog/SearchBlogs.razor
@@ -1,4 +1,5 @@
 ﻿@page "/blog/search"
+@page "/blog/search/{SearchString}"
 @layout NavigationLayout
 @inject IBlogClient BlogClient
 @inject ICategoryClient CategoryClient
@@ -10,6 +11,8 @@
 <BlogPostList BlogDTOs="_blogDTOs" />
 
 @code {
+    [Parameter] public string SearchString { get; set; }
+
     private List<BlogDTO> _blogDTOs;
     private List<CategoryDTO> _categoryDTOs;
     private BlogSearchDTO _blogSearchDTO = new BlogSearchDTO();
@@ -17,6 +20,7 @@
     protected async override Task OnInitializedAsync()
     {
         await LoadPage();
+        _blogSearchDTO.Title = SearchString ?? default;
     }
 
     private async Task LoadPage()
