--- a/BlogEngine/BlogEngine.Client/Shared/Category/IndividualCategoryCard.razor
+++ b/BlogEngine/BlogEngine.Client/Shared/Category/IndividualCategoryCard.razor
@@ -13,8 +13,8 @@
         <h5 class="card-title">@CategoryDTO.Name</h5>
 
         <a href="category/view/@CategoryDTO.ID/@CategoryDTO.Name" class="btn btn-primary">Details</a>
-
-        <AuthorizeView>
+        
+        <AuthorizeView> @*Roles="@UserRole.Admin"*@
             <Authorized>
                 <a href="category/edit/@CategoryDTO.ID/@CategoryDTO.Name" class="btn btn-warning">Edit</a>
                 <button @onclick="(async() => await CategoryDelete.InvokeAsync(CategoryDTO))" class="btn btn-danger">Delete</button>
