--- a/BlogEngine/BlogEngine.Client/Shared/ConfirmationModal.razor
+++ b/BlogEngine/BlogEngine.Client/Shared/ConfirmationModal.razor
@@ -12,15 +12,21 @@
                     <h5 class="modal-title">
                         @ModalTitle
                     </h5>
-                    <button disabled="@_actionsDisabled" @onclick="Cancel" class="close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+                    @if (!ConfirmOnly)
+                    {
+                        <button disabled="@_actionsDisabled" @onclick="Cancel" class="close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    }
                 </div>
                 <div class="modal-body">
                     @ModalBodyTemplate
                 </div>
                 <div class="modal-footer">
-                    <button disabled="@_actionsDisabled" @onclick="Cancel" class="btn btn-secondary">Cancel</button>
+                    @if (!ConfirmOnly)
+                    {
+                        <button disabled="@_actionsDisabled" @onclick="Cancel" class="btn btn-secondary">Cancel</button>
+                    }
                     <button disabled="@_actionsDisabled" @onclick="OnConfirmButtonClicked" class="btn btn-primary">Confirm</button>
                 </div>
             </div>
@@ -34,6 +40,7 @@
 
     [Parameter] public string ModalTitle { get; set; } = "Confirm";
     [Parameter] public bool Centered { get; set; } = false;
+    [Parameter] public bool ConfirmOnly { get; set; } = false;
     [Parameter] public RenderFragment ModalBodyTemplate { get; set; }
     [Parameter] public EventCallback Confirm { get; set; }
     [Parameter] public EventCallback Cancel { get; set; }
