Added pages to view users and their profiles

--- a/BlogEngine/BlogEngine.Client/Pages/Account/UserPersonalPage.razor
+++ b/BlogEngine/BlogEngine.Client/Pages/Account/UserPersonalPage.razor
@@ -11,7 +11,7 @@
 
 <AuthorizeView Roles="@UserRole.Admin">
     <Authorized>
-        <a class="btn btn-link btn-lg" href="accounts/manage">Manage Accounts</a>
+        <a class="mt-2 btn btn-primary" href="accounts/manage">Manage Accounts</a>
     </Authorized>
 </AuthorizeView>
 
