--- a/BlogEngine/BlogEngine.Client/Shared/Category/CategoryList.razor
+++ b/BlogEngine/BlogEngine.Client/Shared/Category/CategoryList.razor
@@ -1,8 +1,6 @@
 ﻿<GenericList Collection="CategoryDTOs">
     <EmptyTemplateFragment>
-        <div class="text-center">
-            <h1>Categories not available</h1>
-        </div>
+        <TextCenter Text="Categories not available"/>
     </EmptyTemplateFragment>
     <WholeCollectionTemplate>
 
