--- a/BlogEngine/BlogEngine.Client/Shared/Navigation.razor
+++ b/BlogEngine/BlogEngine.Client/Shared/Navigation.razor
@@ -11,6 +11,10 @@
                     <a class="nav-link" href="/">Home</a>
                 </li>
 
+                <li class="nav-item active">
+                    <a class="nav-link" href="account/profiles">All Profiles</a>
+                </li>
+
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="blog-dropdown" data-toggle="dropdown"
                        aria-expanded="false">Blog</a>
@@ -32,7 +36,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="subscribe-dropdown" data-toggle="dropdown"
-                       aria-expanded="false">Notifications-Subscribers</a>
+                       aria-expanded="false">Notifications</a>
                     <ul class="dropdown-menu" aria-labelledby="subscribe-dropdown">
                         <li><a class="dropdown-item" href="notificationReceiver/create">Subscribe</a></li>
                         <li><a class="dropdown-item" href="notificationReceivers/manage">Manage</a></li>
