--- a/BlogEngine/BlogEngine.Client/Pages/Category/ViewCategory.razor
+++ b/BlogEngine/BlogEngine.Client/Pages/Category/ViewCategory.razor
@@ -10,20 +10,23 @@
 }
 else
 {
-    @if (_categoryDTO.GeneralCover is null)
-    {
-        <img src="css/Images/image_not_available_template.png">
-    }
-    else
-    {
-        <img src="data:image/jpeg;base64,@(Convert.ToBase64String(_categoryDTO.GeneralCover))">
-    }
+    <div class="text-center">
 
-    <h1>Name : @_categoryDTO.Name</h1>
-    <h1>Created By : @_categoryDTO.CreatedBy</h1>
-    <h6>Created @_categoryDTO.DateCreated.Value.GetRelativeTime() ago</h6>
-    <h1>Last Updated By : @_categoryDTO.LastUpdateBy</h1>
-    <h6>Updated @_categoryDTO.LastUpdateDate.Value.GetRelativeTime() ago</h6>
+        @if (_categoryDTO.GeneralCover is null)
+        {
+            <img src="css/Images/image_not_available_template.png">
+        }
+        else
+        {
+            <img src="data:image/jpeg;base64,@(Convert.ToBase64String(_categoryDTO.GeneralCover))">
+        }
+
+        <div class="my-4">
+            <h1 class="my-2">@_categoryDTO.Name</h1>
+            <h3> Author is @_categoryDTO.CreatedBy</h3>
+            <h3>Last updated by @_categoryDTO.LastUpdateBy <span class="half-font-size">(@_categoryDTO.LastUpdateDate.Value.GetRelativeTime() ago)</span></h3>
+        </div>
+    </div>
 }
 
 @code{
