--- a/BlogEngine/BlogEngine.Client/_Imports.razor
+++ b/BlogEngine/BlogEngine.Client/_Imports.razor
@@ -32,3 +32,4 @@
 @using BlogEngine.Shared
 @using BlogEngine.Shared.DTOs
 @using BlogEngine.Shared.Helpers
+@using BlogEngine.ClientServices.Helpers
