--- a/BlogEngine/BlogEngine.Client/wwwroot/css/main.css
+++ b/BlogEngine/BlogEngine.Client/wwwroot/css/main.css
@@ -56,3 +56,11 @@ body {
 .star-checked {
     color: orange;
 }
+
+.user-profile-picture {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+    border-radius: 50%;
+}
